<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <TextView
            android:id="@+id/textViewPerfil"
            android:layout_width="199dp"
            android:layout_height="20dp"
            android:text="@string/mi_perfil_personal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            />

        <!-- Importante el tipo de dato, texto, correo...se usa el
        android:input=textPersonName -->
        <!-- Usamos placeHolder: android:hint="" -->

        <ImageView
            android:id="@+id/imageViewFoto"
            android:layout_width="96dp"
            android:layout_height="97dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toEndOf="@+id/textViewPerfil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="@drawable/coco" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="220dp"
            android:layout_height="42dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewPerfil"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="@+id/textViewPerfil"
            app:layout_constraintTop_toBottomOf="@+id/textViewPerfil"
            app:layout_constraintVertical_bias="0.053"
            android:background="@color/amarillo"/>

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="220dp"
            android:layout_height="42dp"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNombre"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
            app:layout_constraintVertical_bias="0.051"
            android:background="@color/amarillo"/>

        <EditText
            android:id="@+id/editTextTextCorreoElectronico"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextApellido"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextApellido"
            app:layout_constraintTop_toBottomOf="@+id/editTextApellido"
            app:layout_constraintVertical_bias="0.049"
            android:background="@color/amarillo"/>

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="99dp"
            android:layout_height="144dp"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.0"
            android:background="@color/amarillo">

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                />

            <RadioButton
                android:id="@+id/radioButtonFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/radioButtonOtro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otro" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerPaises"
            android:layout_width="165dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.201"
            android:background="@color/amarillo"
             />

        <CheckBox
            android:id="@+id/checkBoxLectura"
            android:layout_width="83dp"
            android:layout_height="52dp"
            android:text="@string/lectura"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.032"
            android:background="@color/amarillo"/>

        <CheckBox
            android:id="@+id/checkBoxDeporte"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:text="@string/deporte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.032"
            android:background="@color/amarillo"/>

        <CheckBox
            android:id="@+id/checkBoxMusica"
            android:layout_width="83dp"
            android:layout_height="52dp"
            android:text="@string/musica"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.032"
            android:background="@color/amarillo"/>

        <CheckBox
            android:id="@+id/checkBoxArte"
            android:layout_width="83dp"
            android:layout_height="52dp"
            android:text="@string/arte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoElectronico"
            app:layout_constraintVertical_bias="0.032"
            android:background="@color/amarillo"/>

        <SeekBar
            android:id="@+id/seekBarSatisfaccion"
            android:layout_width="102dp"
            android:layout_height="38dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinnerPaises"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinnerPaises"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPaises"
            app:layout_constraintVertical_bias="0.0"
            android:text="Nivel satisfaccion"
            />

        <TextView
            android:id="@+id/textViewValorSatisfaccion"
            android:layout_width="54dp"
            android:layout_height="38dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinnerPaises"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/spinnerPaises"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPaises"
            app:layout_constraintVertical_bias="0.0"
            android:background="@color/amarillo"/>

        <Switch
            android:id="@+id/switchSuscribirse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suscribirse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewValorSatisfaccion"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSatisfaccion"
            app:layout_constraintVertical_bias="0.076" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupSexo"
            app:layout_constraintVertical_bias="0.189"
            />

        <TextView
            android:id="@+id/textViewVisualizacionPerfil"
            android:layout_width="389dp"
            android:layout_height="144dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGuardar"
            app:layout_constraintVertical_bias="0.309"
            android:background="@color/rojoClaro"

             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
